gac_sb/objects/V2Params__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AutoSynchOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoSynchOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BUFL__c</fullName>
        <label>BUFL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUINNO__c</fullName>
        <label>BUINNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUOPTI__c</fullName>
        <label>BUOPTI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuDescribeId__c</fullName>
        <label>BuDescribeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIN_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CIN Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForceSegmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si cochée, on va forcer la présence d&apos;une segmentation pour pouvoir enregistrer une opportunité</inlineHelpText>
        <label>Obliger la présence d&apos;une segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormationDone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si cochée, on utilise le nouveau process sans RDV à prendre sur les opportunités</inlineHelpText>
        <label>Formation Effectuée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunitesFR__c</fullName>
        <inlineHelpText>Listes des opportunités pour lesquelles on va chercher a recopier la segmentation</inlineHelpText>
        <label>Opportunités FR RecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseAlertPB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseAlertPB</label>
        <type>Checkbox</type>
    </fields>
    <label>V2Params</label>
</CustomObject>